--- a/src/main/webapp/dirigente/montagemEncontrista.xhtml
+++ b/src/main/webapp/dirigente/montagemEncontrista.xhtml
@@ -5,7 +5,8 @@
 	xmlns:f="http://java.sun.com/jsf/core"
 	xmlns:p="http://primefaces.org/ui"
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
-	xmlns:ui="http://java.sun.com/jsf/facelets">
+	xmlns:ui="http://java.sun.com/jsf/facelets"
+  	xmlns:pe="http://primefaces.org/ui/extensions">
 
 <h:head>
 	<title>ECC-SLG</title>
@@ -185,12 +186,18 @@
 												 onclick="PF('dlgNovosCasais').show()" update=":cadNovosCasais"
 												 title="Adiciona casais ao ECC selecionado."
 												 disabled="#{encontristaEccBean.habilitaBotaoIncluiCasaisEncontristas}"/>
+								<p:commandButton id="btnImprimirEncontristas" action="#{encontristaEccBean.imprimirEncontristas}"
+												 oncomplete="PF('exibiPDF').show()"
+												 disabled="#{encontristaEccBean.habilitaBotaoImprimirCasaisEncontristas}"
+												 icon="ui-icon-print" value="Imprimir Encontristas" style="margin-left: 5px;"
+												 ajax="true" update="fileUpload">
+							</p:commandButton>
 							</h:panelGroup>
 						</h:panelGrid>
 					</f:facet>
 					<p:ajax event="rowSelect"
 							listener="#{encontristaEccBean.onRowSelectEncontristaEcc}"
-							update="btnExcluir btnIncluiCasaisEncontristas" />
+							update="btnExcluir btnIncluiCasaisEncontristas btnImprimirEncontristas" />
 					<p:column width="200">
 						<f:facet name="header">ECC</f:facet>
 						#{encontristaEcc.ecc.numero} - #{encontristaEcc.ecc.tema}
@@ -352,5 +359,11 @@
 				</div>
 			</div>
 		</p:dialog>
+		<p:dialog widgetVar="exibiPDF" modal="true" draggable="false"
+				  closable="true" resizable="false" showHeader="true" width="1200px" height="620">
+			<pe:documentViewer id = "fileUpload"
+							   height="600" url="${encontristaEccBean.urlRelatorio}"/>
+		</p:dialog>
+
 </h:body>
 </html>
