Impressão de Equipes, Palestrantes para o quadrante, permitir imprimir relatórios do quadrante com o ECC aberto, criação do campo Ordem em Palestras, para a impressão do relatório

--- a/src/main/webapp/administrador/menuAdministrador.xhtml
+++ b/src/main/webapp/administrador/menuAdministrador.xhtml
@@ -126,6 +126,8 @@
 					</h1>
 				</div>
 			</div>
+		<h2>Relatórios</h2>
+			<h3>Relatórios: Fonte Cabeçalho : SERIF: Tamanho: 12 / Fonte Dados Relatório : SERIF: Tamanho: 10</h3>
 	</h:form>
 </h:body>
 </html>
