--- a/src/main/webapp/dirigente/montagemCirculo.xhtml
+++ b/src/main/webapp/dirigente/montagemCirculo.xhtml
@@ -165,7 +165,7 @@
 					<f:facet name="header">
 						<h:panelGrid columns="2" styleClass="semBordaInterna"
 									 columnClasses="tituloGridSolicitacao, botoesGridSolicitacao">
-							<p:outputLabel value="Lista de Círculos Cadastrados"
+							<p:outputLabel value="Círculos Cadastrados"
 										   style="float:left;" />
 							<h:panelGroup style="float:right;">
 								<p:commandButton action="#{circuloEccBean.novoCirculo}"
