--- a/src/main/webapp/dirigente/montagemEncontrista.xhtml
+++ b/src/main/webapp/dirigente/montagemEncontrista.xhtml
@@ -100,7 +100,11 @@
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCirculos.png" />
 							<a href="../dirigente/montagemCirculo.xhtml">Círculos</a></li>
-
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemCirculosEstudos.png" /><a
+								href="../dirigente/montagemCirculoEstudo.xhtml">Círculos de Estudo</a></li>
 					</ul>
 				</li>
 			</ul>
@@ -188,7 +192,7 @@
 												 oncomplete="PF('exibiPDF').show()"
 												 disabled="#{encontristaEccBean.habilitaBotaoImprimirCasaisEncontristas}"
 												 icon="ui-icon-print" value="Encontristas" style="margin-left: 5px;"
-												 ajax="true" update="fileUpload" rendered="false">
+												 ajax="true" update="fileUpload" rendered="">
 							</p:commandButton>
 							</h:panelGroup>
 						</h:panelGrid>
