--- a/src/main/webapp/dirigente/montagemPalestrante.xhtml
+++ b/src/main/webapp/dirigente/montagemPalestrante.xhtml
@@ -99,7 +99,11 @@
 								margin-left:10px; margin-top:8px; margin-right:9px;"
 											name="montagemCirculos.png" /><a
 								href="../dirigente/montagemCirculo.xhtml">Círculos</a></li>
-
+						<li><h:graphicImage library="imagens/menu"
+											style="width:30px; height:30px;
+								margin-left:10px; margin-top:8px; margin-right:9px;"
+											name="montagemCirculosEstudos.png" /><a
+								href="../dirigente/montagemCirculoEstudo.xhtml">Círculos de Estudo</a></li>
 					</ul>
 				</li>
 			</ul>
